# AutomaticLineExtraction

./: .gitignore  README.md  cluster.py  example.py  exe.sh  exe1.sh  k_means_example.py
1_read_cloud/: CMakeLists.txt  define_points_limit.py  limit_points.txt  limit_points_ant.txt  obs.txt  read_cloud  read_cloud.cpp
1_read_cloud/mono_rest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mono_rest  mono_rest.cpp
2_classifica/: 2_classifica  CMakeCache.txt  CMakeLists.txt  Makefile  classifica.cpp  cmake_install.cmake
3_elimina/: 3_elimina  3_elimina.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
4_projeta/: 4_projeta  4_projeta.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cloud_concat.txt  cmake_install.cmake  inner_image.tif  inner_img_rgb.tif  pc_pixels.txt  pc_pixels_concat.txt  planes.pcd  planes_ant.txt
5_extrai_linhas/: CMakeCache.txt  LSD_MULTISCALE  Makefile  cmake_install.cmake  grupos.tif  img_quant.tif  inner_img_rgb.tif  main_detection.cpp
5_extrai_linhas/DETECTION/: lsd.hpp
5_extrai_linhas/lines/: FX_1_lines.txt
orienta/: eop.txt  gcp_observ_C_L.txt  op.txt  space_ressection.py  test_rotation.py
teste/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pilow.py  planes.pcd  teste  teste.cpp
teste/kmeans/: quat.py
teste/teste2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  group_1.pcd  group_1.txt  group_2.pcd  group_2.txt  (+8 more)
teste/teste2/concat_clouds/: CMakeCache.txt  CMakeLists.txt  Makefile  cloud_concat.pcd  cmake_install.cmake  concat_clouds  concat_clouds.cpp
